app/system/assets/less/pagekit.less
/* ... */
.pk-icon-large-comment { background-image: url("../../assets/images/icon-large-comment.svg"); }

/*
 * Link Hover with Icon and Text
 */

.pk-link-icon {
    display: inline-block;
    color: @global-muted-color;
}

.pk-link-icon:hover { color: @global-color; }

.pk-link-icon [class*='pk-icon-'] { opacity: 0.3; }
.pk-link-icon:hover [class*='pk-icon-'] { opacity: 1; }

/*
 * Form Icon
 */

.uk-form-icon > [class*='pk-icon-'] {
  &:extend(.uk-form-icon > [class*='uk-icon-']);
}

.uk-form-icon-flip > [class*='pk-icon-'] {
  &:extend(.uk-form-icon-flip > [class*='uk-icon-']);
}


/* Modifier `pk-subnav-icon`
========================================================================== */

/*
 * 1. Needed if in table width minimum
 * 2. Gutter
 */

.pk-subnav-icon {
    /* 1 */
    -ms-flex-wrap: nowrap;
    -webkit-flex-wrap: nowrap;
    flex-wrap: nowrap;
    /* 2 */
    margin-left: -10px;
    margin-top: -10px !important;
    margin-bottom: 0;
}

.pk-subnav-icon > * {
    padding-left: 10px;
    margin-top: 10px;
}

.uk-nav-side .pk-subnav-icon > * { padding-left: 5px; }

.pk-subnav-icon > * > * { color: @global-muted-color; }

.pk-subnav-icon > * > :hover,
.pk-subnav-icon > * > :focus { color: @global-color; }


/* Panel Badge Modifiers (System Themes)
========================================================================== */

/*
 * Background Modifier
 */

.pk-panel-badge {
    padding: 7px 10px;
    background: #fff;
    border-radius: 2px;
}

/*
 * Background Modifier
 */

.pk-panel-badge-bottom-right {
    position: absolute;
    right: @panel-box-padding;
    bottom: @panel-box-padding;
}


/* Text Large (Dashboard)
========================================================================== */

.pk-text-large {
    font-family: @base-heading-font-family;
    font-weight: 400;
    font-size: @base-h2-font-size;
    line-height: @base-h2-line-height;
}

.pk-text-xlarge {
    font-family: @base-heading-font-family;
    font-size: 46px;
    line-height: 52px;
}


/* Modifier `pk-table-large`
========================================================================== */

.pk-table-large th,
.pk-table-large td {
    padding-top: 28px;
    padding-bottom: 28px;
}


/* Modifier `pk-table-collapse`
========================================================================== */

.pk-table-collapse {
    padding-left: 6px !important;
    padding-right: 0 !important;
}


/* Sub-modifier `pk-table-width-*`
========================================================================== */

/*
 * Make cell as small as possible
 */

.pk-table-width-minimum { width: 1px; }

/*
 * Useful width classes for table cells
 * Text will wrap automatically, a long string will expand the cell
 */

.pk-table-width-100 { width: 100px; }
.pk-table-width-150 { width: 150px; }
.pk-table-width-200 { width: 200px; }

/*
 * Prevent a long string from expanding the cell
 * `min-width` is needed to prevent cells from collapsing
 */

.pk-table-text-break { word-break: break-word; }

.pk-table-min-width-100 { min-width: 100px; }
.pk-table-min-width-150 { min-width: 150px; }
.pk-table-min-width-200 { min-width: 200px; }
.pk-table-min-width-300 { min-width: 300px; }

/*
 * Need when `uk-text-truncate` is used
 */

.pk-table-max-width-100 { max-width: 100px; }
.pk-table-max-width-150 { max-width: 150px; }


/* Sub-modifier `pk-table-order`
========================================================================== */

.pk-table-order:hover { cursor: pointer; }

.pk-table-order:hover,
.pk-table-order.uk-active { color: #666; }

/*
 * Icon
 */

.pk-table-order [class*='pk-icon-'] { opacity: 0.3; }

.pk-table-order:hover [class*='pk-icon-'],
.pk-table-order.uk-active [class*='pk-icon-'] { opacity: 1; }


/* Modifier `pk-filter`
========================================================================== */

.pk-filter:hover > * { color: #666; }

.pk-filter.uk-active  > * {
    color: #666;
    font-weight: bold;
}


/* Sub-modifier `pk-table-fake`
========================================================================== */

.pk-table-fake {
    display: table;
    width: 100%;
    padding: 0;
}

.pk-table-fake > div {
    display: table-cell;
    padding: 16px 12px;
    vertical-align: middle;
}

/*
 * Imitate table header
 */

.pk-table-fake-header > div {
    font-size: round((@global-font-size * 0.85)); // 12px / 14px
    text-transform: uppercase;
    font-weight: normal;
    color: @global-muted-color;
}

.pk-table-fake-border { box-shadow: inset 0 -1px 0  @global-border; }

.pk-table-fake-nestable-padding { padding-left: 28px !important; }

/*
 * Fix height
 */

.pk-table-fake .uk-form-select { vertical-align: top; }


/* Thumbnail (Finder + Image Picker)
 ========================================================================== */

.pk-thumbnail {
    height: 180px;
    background-repeat: no-repeat;
    background-position: 50% 50%;
    background-size: cover;
}

/*
 * Placeholder
 */

.pk-thumbnail-folder {
    background-image: url("../../assets/images/icon-folder-large.svg");
    background-size: 80px 80px;
}

.pk-thumbnail-file {
    background-image: url("../../assets/images/icon-file-large.svg");
    background-size: 80px 80px;
}

.pk-thumbnail-image {
    background-image: url("../../assets/images/placeholder-icon.svg");
    background-size: 80px 80px;
}


/* Panel Teaser
 ========================================================================== */

.pk-panel-teaser {
    margin: @panel-box-teaser-margin @panel-box-teaser-margin @panel-teaser-margin-bottom @panel-box-teaser-margin;
    padding: @panel-box-padding;
    border-bottom: 1px solid @global-border;
}


/* Panel Background (Dashboard)
 ========================================================================== */

.pk-panel-background {
    margin: -@panel-box-padding;
    padding: @panel-box-padding;
    background: @global-primary-background url("../../assets/images/dashboard-location.jpg") 0 0 no-repeat;
    background-size: cover;
}
/* ... */

